--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,10 +25,8 @@ jobs:
     - name: Set env to staging
       if: endsWith(github.ref, '/main')
       run: |
-        echo "::set-env name=ENVIRONMENT::staging"
         echo "Hello $NAME!"
     - name: Set env to production
-      if: endsWith(github.ref, '/main')
+      if: endsWith(github.ref, '/teste')
       run: |
-        echo "::set-env name=ENVIRONMENT::production"
         echo "Hello $NAME"
